--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.application.name=limits-service
 spring.config.import=optional:configserver:http://localhost:8888
+
+spring.profiles.active=qa
+spring.cloud.config.profile=qa
+
 limits-service.minimum=1
-limits-service.maximum=998
+limits-service.maximum=990
+spring.devtools.add-properties=true
+# logging.level.org.springframework=DEBUG
