Fix profile switching issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=limits-service
+spring.application.name=limits-services
 spring.config.import=optional:configserver:http://localhost:8888
 
-spring.profiles.active=qa
-spring.cloud.config.profile=qa
+spring.profiles.active=dev
+spring.cloud.config.profile=prod
 
 limits-service.minimum=1
 limits-service.maximum=990
-spring.devtools.add-properties=true
+#spring.devtools.add-properties=true
 # logging.level.org.springframework=DEBUG
