Remove extra property file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.config.import=optional:configserver:http://localhost:8888
 
 spring.profiles.active=dev
 spring.cloud.config.profile=qa
-server.port=8081
+
 limits-service.minimum=1
 limits-service.maximum=990
-#spring.devtools.add-properties=true
+spring.devtools.add-properties=false
 # logging.level.org.springframework=DEBUG
